<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/Background_principal"
    tools:context=".ui.Inicio.InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Empresa"
            android:textColor="@color/Color_Letra"
            android:textSize="19.5sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <!--<TextView
        android:id="@+id/textView2"
        android:layout_width="293dp"
        android:layout_height="31dp"
        android:text="@string/Empresa"
        android:textColor="@color/Color_Letra"
        android:textSize="25sp"
        android:textStyle="bold"/>-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aventura"
        android:textColor="@color/Color_Letra"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="82dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@color/naranja"
        android:text="@string/siguiente"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:text="@string/registrate"
        android:gravity="center"
        android:textColor="@color/Color_Letra"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_marginTop="25dp"/>


</LinearLayout>